Fixed collapsing header problem for real this time

--- a/css/style.css
+++ b/css/style.css
@@ -44,12 +44,6 @@ html, body {
 body {
   font-family: 'Muli', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   background: #f5f5f6; }
-  @media (min-width: 800px) {
-    body {
-      display: flex;
-      flex-flow: column nowrap;
-      justify-content: flex-start;
-      align-items: stretch; } }
   @media (max-width: 600px) {
     body {
       height: auto;
@@ -169,14 +163,10 @@ header {
       margin-bottom: 0; } }
   @media (max-width: 600px) {
     header {
-      padding: 1rem;
-      flex-direction: row;
-      align-items: center; } }
-  @media (max-width: 400px) {
-    header {
       flex-direction: column;
       padding-top: .75rem;
-      padding-bottom: .75rem; } }
+      padding-bottom: .75rem;
+      align-items: center; } }
 
 .title {
   display: flex;
@@ -359,6 +349,9 @@ footer {
       width: 100%;
       max-width: none;
       margin-top: 2rem; } }
+
+.col--body li {
+  margin-bottom: .25rem; }
 
 .banner {
   display: flex;
