--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,15 +7,7 @@ html, body{
 
 body{
     font-family: 'Muli', -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    
-    // background: url('../img/bg-pattern.png') repeat;
     background: #f5f5f6;
-    @media (min-width: 800px) {
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: flex-start;
-        align-items: stretch;
-    }
 
     @media (max-width: 600px) {
         height: auto;
