--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -18,3 +18,8 @@
         margin-top: 2rem;
     }
 }
+.col--body{
+    li{
+        margin-bottom: .25rem;
+    }
+}
